--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Khand:wght@400;600;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @layer utilities {
   input[type="number"]::-webkit-inner-spin-button,
   input[type="number"]::-webkit-outer-spin-button {
